Add Mockito as agent for Java 21+